--- a/log_ledger/chaincode-java/Dockerfile
+++ b/log_ledger/chaincode-java/Dockerfile
@@ -6,7 +6,8 @@ COPY src/ src/
 COPY build.gradle ./ 
 
 # Build and package our code
-RUN gradle --no-daemon build shadowJar -x checkstyleMain -x checkstyleTest
+RUN gradle --no-daemon build shadowJar -x checkstyleMain -x test
+#-x checkstyleTest
 
 
 # the second stage of our build just needs the compiled files
