--- a/log_ledger/application-gateway-java/build.gradle
+++ b/log_ledger/application-gateway-java/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     compileOnly 'io.grpc:grpc-api:1.54.1'
     runtimeOnly 'io.grpc:grpc-netty-shaded:1.54.1'
     implementation 'com.google.code.gson:gson:2.10.1'
+//    implementation 'org.hyperledger.fabric-sdk-java:fabric-sdk-java:2.2.22'
+
 }
 
 java {
